--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@
 ehthumbs.db
 Thumbs.db
 
-software_trigger/exmaples/.ipynb_checkpoints/*
+.ipynb_checkpoints
 software_trigger/bin/*
 software_trigger/work/*
 data/*
