Add creation of ../bin to the makefile

--- a/software_trigger/src/makefile
+++ b/software_trigger/src/makefile
@@ -12,6 +12,7 @@ all:    $(TESTS)
 
 l1_trigger_software: l1_trigger_software.cpp
 	$(CXX) $(CFLAGS) l1_trigger_software.cpp -o l1_trigger 
+	mkdir -p ../bin
 	mv l1_trigger ../bin
 
 l2_trigger_software: l2_trigger_software.cpp
